# ApkSignatureKillerEx

./: .gitmodules  gradle.properties
.github/workflows/: build.yml
killer/: CMakeLists.txt  build.gradle
killer/src/main/c/: dobby_hook.c  inline_hook.c  mt_jni.c
